build-in sms app
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@269 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
   numeru, osobna opcja w menu g³ównym do wysy³ania sms'a pod wpisany z
   klawiatury numer.
 * ustawienia kolorów i czcionek listy u¿ytkowników i okna rozmowy
+* domy¶lna opcja wywo³anie wbudowanego programu kadusms
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
