wybor emotikonow + kadubis
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@271 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
   klawiatury numer.
 * ustawienia kolorów i czcionek listy u¿ytkowników i okna rozmowy
 * domy¶lna opcja wywo³anie wbudowanego programu kadusms
+* dynamiczne emotikony z mo¿liwo¶ci± wyboru zestawu (+do³±czony kadubis)
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
