update o dane z forum
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@284 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/TODO
+++ b/TODO
@@ -40,6 +40,7 @@
  + wywaliæ pokazywanie siê has³a na konsoli
  + dodaæ kilka numerów ip serwerów gadu
  ? ustawienie czy mesg ma wpadaæ do otwartego okna chat
+ + instalacja dokumentacji wraz z Kadu, opcja Pomoc w menu
  ! inne pady i halty kadu - patrz forum
  
 
