--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 * ustawienia kolorów i czcionek listy u¿ytkowników i okna rozmowy
 * domy¶lna opcja wywo³anie wbudowanego programu kadusms
 * dynamiczne emotikony z mo¿liwo¶ci± wyboru zestawu (+do³±czony kadubis)
+* has³o nie pokazuje siê na konsoli
+
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
