- wiadomosci typu message "wpadaja" do okna rozmowy.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@287 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@
 * domy¶lna opcja wywo³anie wbudowanego programu kadusms
 * dynamiczne emotikony z mo¿liwo¶ci± wyboru zestawu (+do³±czony kadubis)
 * has³o nie pokazuje siê na konsoli
-
+* wiadomo¶ci typu message "wpadaj±" do okna rozmowy
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
