Przejscie z ChooseStatus na QLineEdit i ograniczenie do 40 znakow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@292 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
 * has³o nie pokazuje siê na konsoli
 * wiadomo¶ci typu message "wpadaj±" do okna rozmowy
 * historia wys³anych sms'ów
+* ograniczenie statusu opisowego do 40 znaków i przejscie na QLineEdit
+
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
