--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,8 @@
 * wiadomo¶ci typu message "wpadaj±" do okna rozmowy
 * historia wys³anych sms'ów
 * ograniczenie statusu opisowego do 40 znaków i przejscie na QLineEdit
-
+* mo¿liwo¶æ konfiguracji serwera proxy w oknie konfiguracji
+* w strukturze config: char *password -> QString password
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
