- opcja powiadamiania o zmianie statusu wszystkich uzytkownikow.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@303 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 * w strukturze config: char *password -> QString password
 * autoryzacja proxy
 * ENTER/RETURN w li¶cie u¿ytkowników dzia³a tak jak podwójne klikniêcie myszk±
+* opcja powiadamiania o zmianie statusu wszystkich u¿ytkowników
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
