- kadu nie wysypuje sie gdy mamy wlaczone "autoaway" i status offline.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@307 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
 * autoryzacja proxy
 * ENTER/RETURN w li¶cie u¿ytkowników dzia³a tak jak podwójne klikniêcie myszk±
 * opcja powiadamiania o zmianie statusu wszystkich u¿ytkowników
+* kadu nie wysypuje siê jak mamy w³±czone "autoaway" i jeste¶my offline
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
