- w oknie konfiguracji: gdy odznaczymy domyslny serwer GG i nie wpiszemy zadnego ponizej to nastepnej probie polaczenia z GG kadu juz nie wywala sie.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@311 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@
 * kadu nie wysypuje siê jak mamy w³±czone "autoaway" i jeste¶my offline
 * w oknie poszukiwañ: gdy znaleziono jednego u¿ytkownika nie trzeba go zaznaczaæ,
   aby dodaæ go do listy, albo uaktualniæ informacjê o nim
+* w oknie konfiguracji: gdy odznaczymy domy¶lny serwer GG i nie wpiszemy ¿adnego
+  serwera GG to kadu ju¿ nie wywala siê przy próbie ponownego ³±czenia siê
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
