autostatus z pliku + wydzielenie status.h/cpp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@314 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@
   aby dodaæ go do listy, albo uaktualniæ informacjê o nim
 * w oknie konfiguracji: gdy odznaczymy domy¶lny serwer GG i nie wpiszemy ¿adnego
   serwera GG to kadu ju¿ nie wywala siê przy próbie ponownego ³±czenia siê
+* Autostatus z pliku ~/.gg/description je¶li istnieje - do zastosowañ zwi±zanych
+  z XMMS i innymi.
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
