--- a/TODO
+++ b/TODO
@@ -56,7 +56,7 @@
  ? naprawiæ ikonkê w dock menu
  ? dodaæ wiêcej funkcji do dock menu (szukaj, dodaj, usuñ, odbierz)
  ? rozbudowa opcji ignorowania o blokowanie
- ? autostatus, pod³±czenie pod odtwarzacz mp3
+ ? autostatus (zmiana z listy co jaki¶ czas)
 
  
  TODO dla wersji pó¼niejszych
