- okno rejestracji: przejscie na QSocketNotifier.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@316 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
   serwera GG to kadu ju¿ nie wywala siê przy próbie ponownego ³±czenia siê
 * Autostatus z pliku ~/.gg/description je¶li istnieje - do zastosowañ zwi±zanych
   z XMMS i innymi.
+* okno rejestracji: przej¶cie na QSocketNotifier
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
