- opis statusu: bardziej restrykcyjne (zmienna sess) sprawdzanie czy jest podlaczeni do serwera GG.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@331 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@
 * Autostatus z pliku ~/.gg/description je¶li istnieje - do zastosowañ zwi±zanych
   z XMMS i innymi.
 * okno rejestracji: przej¶cie na QSocketNotifier
+* status opisowy: bardziej restrykcyjne (zmienna sess) sprawdzanie czy jeste¶my
+  od³±czeni od serwera
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
