- kasowanie pliku description po jego odczytaniu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@332 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
 * okno rejestracji: przej¶cie na QSocketNotifier
 * status opisowy: bardziej restrykcyjne (zmienna sess) sprawdzanie czy jeste¶my
   od³±czeni od serwera
+* status opisowy: kasowanie pliku description po jego odczytaniu
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
