--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
 * configure: mo¿liwo¶æ wy³±czenia kompilacji kadusms (--disable-sms)
 * configure: instalacja dokumentacji wraz z Kadu (i opcja --disable-doc)
 * configure: symbole dla debugera nie sa wkompilowywane (i opcja --enable-debug)
+* opcja Pomoc w menu - otwiera Konqueror'a z zainstalowan± dokumentacj±
 
 
 +++ wersja 0.3.2
