--- a/TODO
+++ b/TODO
@@ -14,22 +14,27 @@
  TODO dla wersji 0.3.3
 -----------------------
 
- ! przetestowaæ wysy³anie plików
- ! wyeliminowaæ wszystkie b³êdy Xlib
- + dopracowaæ grupy
- + dokoñczyæ rozmowy g³osowe
- + mrugaj±cy tytu³ okna chat (zminimalizowanego te¿) przy doj¶ciu nowej wiad.
- + mrugaj±ca koperta nowej wiadomo¶ci
- ? wykrywanie niewidocznych jako opcja
  + usun±æ z kodów ¼ród³owych poszczególnych modu³ów informacje
    o autorach - wystarczy plik AUTHORS
  + sprawdzanie dostêpnych aktualizacji
+
+
+ TODO dla wersji 0.3.4
+-----------------------
+
+ + dokoñczyæ rozmowy g³osowe
+ ! wyeliminowaæ wszystkie b³êdy Xlib
+ ! inne pady i halty kadu - patrz forum
  + sortowanie wed³ug polskiego locale (³ po l itp)
  ? dodawanie nieznanych u¿ytkowników z konferencji do listy jako opcja
    i ew. z listy userów w oknie konferencji
- ! wyja¶niæ zapêtlenia siê przy utracie ³±czno¶ci z serwerem 
  + przycisk TEST w ustawieniach d¼wiêku
- ! inne pady i halty kadu - patrz forum
+ ? wykrywanie niewidocznych jako opcja
+ ! wyja¶niæ zapêtlenia siê przy utracie ³±czno¶ci z serwerem 
+ ! przetestowaæ wysy³anie plików
+ + dopracowaæ grupy
+ + mrugaj±cy tytu³ okna chat (zminimalizowanego te¿) przy doj¶ciu nowej wiad.
+ + mrugaj±ca koperta nowej wiadomo¶ci
 
 
  TODO dla wersji 0.4.0
