--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,8 @@
 * configure: instalacja dokumentacji wraz z Kadu (i opcja --disable-doc)
 * configure: symbole dla debugera nie sa wkompilowywane (i opcja --enable-debug)
 * opcja Pomoc w menu - otwiera Konqueror'a z zainstalowan± dokumentacj±
+* usuneli¶my z kodów ¼ród³owych poszczególnych modu³ów informacje
+  o autorach - wystarczy plik AUTHORS
 
 
 +++ wersja 0.3.2
