- status zmienia sie prawidlowo.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@346 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,7 +36,7 @@
   o autorach - wystarczy plik AUTHORS
 * mrugaj±cy tytu³ okna chat (zminimalizowanego te¿)
   przy doj¶ciu nowej wiadomo¶ci (Mast3r)
-
+* status zmienia siê prawid³owo
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
