Dodano polski instalator
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@349 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -37,7 +37,7 @@
 * mrugaj±cy tytu³ okna chat (zminimalizowanego te¿)
   przy doj¶ciu nowej wiadomo¶ci (Mast3r)
 * status zmienia siê prawid³owo
-
+* Instalator w jezyku polskim - Instaluj
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
 * rozmowy konferencyjne
