Udoskonalony o funkcje potwierdzenia Instaluj
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@354 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@
   przy doj¶ciu nowej wiadomo¶ci (Mast3r)
 * status zmienia siê prawid³owo
 * Instalator w jezyku polskim - Instaluj
+* Dodano funkcje warunkowe do skryptu Instaluj
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
 * rozmowy konferencyjne
