--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,6 @@ programista, opiekun serwera kadu.net
 
 Adrian Smarzewski <adrians at aska dot com dot pl>
 programista, twórca wersji polskiej
+
+Roman Krzystyniak <Krzystyniak dot Roman at Jezus dot pl>
+dokumentacja projektu
