- imiona bez zdrobnien.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@358 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,9 @@
 Autorzy Kadu:
 
-Tomek Jarzynka <tomee at cpi dot pl>
+Tomasz Jarzynka <tomee at cpi dot pl>
 twórca projektu, koordynator, programista, grafik
 
-Tomek Chiliñski <chilek at chilan dot com>
+Tomasz Chiliñski <chilek at chilan dot com>
 programista, opiekun serwera kadu.net
 
 Adrian Smarzewski <adrians at aska dot com dot pl>
