wydzielenie autostatus + mrugajaca kopertka - Mast3r
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@360 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,8 @@
 * status zmienia siê prawid³owo
 * Instalator w jezyku polskim - Instaluj
 * Dodano funkcje warunkowe do skryptu Instaluj
+* mrugaj±ca koperta nowej wiadomo¶ci
+
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
 * rozmowy konferencyjne
