--- a/AUTHORS
+++ b/AUTHORS
@@ -9,5 +9,8 @@ programista, opiekun serwera kadu.net
 Adrian Smarzewski <adrians at aska dot com dot pl>
 programista, twórca wersji polskiej
 
+Dariusz Jagodzik <mast3r at linuxpl dot com>
+programista
+
 Roman Krzystyniak <Krzystyniak dot Roman at Jezus dot pl>
 dokumentacja projektu
