- sprawdzanie dostepnych aktualizacji.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@369 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,7 @@
 * Instalator w jezyku polskim - Instaluj
 * Dodano funkcje warunkowe do skryptu Instaluj
 * mrugaj±ca koperta nowej wiadomo¶ci
+* informacje o nowych wersjach kadu
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
