--- a/ChangeLog
+++ b/ChangeLog
@@ -40,7 +40,7 @@
 * Instalator w jezyku polskim - Instaluj
 * Dodano funkcje warunkowe do skryptu Instaluj
 * mrugaj±ca koperta nowej wiadomo¶ci
-* informacje o nowych wersjach kadu
+* sprawdzanie dostêpnych aktualizacji
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
