F9 czysci zawartosc okna rozmowy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@380 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,7 @@
 * Dodano funkcje warunkowe do skryptu Instaluj
 * mrugaj±ca koperta nowej wiadomo¶ci
 * sprawdzanie dostêpnych aktualizacji
+* F9 - czy¶ci zawarto¶æ okna rozmowy
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
