ikonka okna rozmowy ...
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@381 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,7 @@
 * mrugaj±ca koperta nowej wiadomo¶ci
 * sprawdzanie dostêpnych aktualizacji
 * F9 - czy¶ci zawarto¶æ okna rozmowy
+* ikonka okna rozmowy jest aktualnym stanem rozmowcy
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
