--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,8 @@
 * doklejanie ~/.gg/description do statusu jesli chcemy (por.
   XMMS - libsongchange.so)
 * kompilowanie libgadu jako .so i linkowanie dynamiczne
+* dodane #define HAVE_PTHREAD 1 w libgadu.h - teraz kadu operuje na tej
+  samej strukturze gg_search co libgadu.so
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
