- powiadamianie o update'ach uzywa stalej VERSION.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@398 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,7 @@
 * kompilowanie libgadu jako .so i linkowanie dynamiczne
 * dodane #define HAVE_PTHREAD 1 w libgadu.h - teraz kadu operuje na tej
   samej strukturze gg_search co libgadu.so
+* powiadamianie o update'ach u¿ywa sta³ej VERSION
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
