- mozliwosc anulowania wysylania wiadomosci podczas oczekiwania na potwierdzenie jej wyslania.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@406 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 * dostosowanie do QT 3.1.0 i KDE 3.1-rc5
 * lepszy selektor emotow - potrafi wystawac za chat
   i zachowuje sie jak popup-menu
+* mo¿na anulowaæ wysy³anie wiadomo¶ci podczas oczekiwania na potwierdzenie
+  jej wys³ania
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
