- w oknie rozmowy: zastapienie guzika "Zamknij" guzikiem "Anuluj"   - guzik "Anuluj" powoduje anulowanie wysylania wiadomosci.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@410 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
   jej wys³ania
 * wyszukiwanie u¿ytkowników: pierwszy znaleziony u¿ytkownik staje siê wybranym
   - teraz nie mo¿na ju¿ dodaæ drugi raz tego samego u¿ytkownika
+* w oknie rozmowy: zast±pienie guzika "Zamknij" guzikiem "Anuluj"
+  - guzik "Anuluj" powoduje anulowanie wysy³ania wiadomo¶ci
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
