- mozliwosc wyboru przegladarki www w jakiej ma pokazywac sie wybrany w oknie rozmowy hyperlink.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@423 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@
 * okno rozmowy: KTextBrowser -> QTextBrowser
 * przycisk "Testuj" w oknie konfiguracji powoduj±cy przetestowanie ustawieñ
   dzwiêkowych
+* mo¿liwo¶æ wyboru przegl±darki www w jakiej ma pokazywaæ siê wybrany
+  w oknie rozmowy hyperlink
 
 +++ wersja 0.3.3-pre1
 * automatyczna kompilacja programu sms
